--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-INNETJS_ENV_PREFIX=CANTINC_
-CANTINC_UI_PACKAGE_VERSION=${npm_package_version}
+INNETJS_ENV_PREFIX=CANTINC_UI_
+CANTINC_UI_VERSION=${npm_package_version}
 BUILD_FOLDER=docs
