--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
   "license": "MIT",
   "main": "index.js",
-  "module": "index.mjs",
-  "esnext": "index.mjs",
-  "jsnext:main": "index.mjs",
+  "module": "index.es6.js",
+  "esnext": "index.es6.js",
+  "jsnext:main": "index.es6.js",
   "types": "index.d.ts",
   "private": true,
   "scripts": {
-    "start": "innetjs start -i docs",
+    "start": "innetjs start -i docs -e",
     "build": "npm run build:ui && npm run build:docs",
     "build:docs": "innetjs build -i docs",
     "build:ui": "innetjs release",
@@ -37,7 +37,7 @@
     "url": "https://github.com/cantinc/ui/issues"
   },
   "dependencies": {
-    "@innet/dom": "^0.8.2",
+    "@innet/dom": "^0.9.1",
     "@innet/jsx": "^1.1.0",
     "@textlint/ast-node-types": "^12.2.2",
     "@textlint/markdown-to-ast": "^12.2.3",
@@ -63,7 +63,7 @@
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "innet-jest": "^1.3.5",
-    "innetjs": "^2.2.24",
-    "typescript": "^4.8.4"
+    "innetjs": "^2.3.0",
+    "typescript": "4.8.4"
   }
 }
