--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "innet-jest": "^1.3.5",
     "innetjs": "^2.3.2",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "web-scroll": "^1.1.0"
   }
 }
