--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "url": "https://github.com/cantinc/ui/issues"
   },
   "dependencies": {
-    "@innet/dom": "^0.10.2",
+    "@innet/dom": "^0.10.3",
+    "@cantinc/utils": "^1.3.1",
     "@innet/jsx": "^1.1.0",
     "@textlint/ast-node-types": "^12.2.2",
     "@textlint/markdown-to-ast": "^12.2.3",
