--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "url": "https://github.com/cantinc/ui/issues"
   },
   "dependencies": {
-    "@innet/dom": "^0.10.4",
     "@cantinc/utils": "^1.4.0",
+    "@innet/dom": "^0.10.4",
     "@innet/jsx": "^1.1.0",
     "@textlint/ast-node-types": "^12.2.2",
     "@textlint/markdown-to-ast": "^12.2.3",
+    "highlight.js": "^11.7.0",
     "html-classes": "^2.0.2",
     "innet": "^1.0.1",
     "watch-state": "^3.4.5"
@@ -64,7 +65,7 @@
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "innet-jest": "^1.3.5",
-    "innetjs": "^2.3.3",
+    "innetjs": "^2.3.5",
     "typescript": "4.8.4",
     "web-scroll": "^1.1.0"
   }
