--- a/release/package.json
+++ b/release/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@cantinc/ui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "UI components of innetjs",
-  "homepage": "https://github.com/cantinc/ui",
+  "homepage": "https://cantinc.github.io/ui/",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
   "license": "MIT",
   "main": "index.js",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@cantinc/utils": "^1.4.0",
-    "@innet/dom": "^0.11.4",
+    "@innet/dom": "^0.11.5",
     "@innet/jsx": "^1.1.0",
     "@textlint/ast-node-types": "^12.2.2",
     "@textlint/markdown-to-ast": "^12.2.3",
