--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@cantinc/ui",
   "version": "0.0.14",
   "description": "UI components of innetjs",
-  "homepage": "https://cantinc.github.io/ui/",
+  "homepage": "https://cantinc.github.io/ui",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
   "license": "MIT",
   "main": "index.js",
