add InputMask components

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@textlint/markdown-to-ast": "^12.2.3",
     "html-classes": "^2.0.2",
     "innet": "^1.0.1",
+    "inputmask": "^5.0.7",
     "prismjs": "^1.29.0",
     "watch-state": "^3.4.5"
   },
@@ -51,6 +52,7 @@
     "rollup-plugin-styles": "^4.0.0"
   },
   "devDependencies": {
+    "@types/inputmask": "^5.0.3",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.8.1",
     "@types/prismjs": "^1.26.0",
