--- a/release/package.json
+++ b/release/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cantinc/ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "UI components of innetjs",
   "homepage": "https://cantinc.github.io/ui",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
@@ -43,6 +43,7 @@
     "@textlint/markdown-to-ast": "^12.2.3",
     "html-classes": "^2.0.2",
     "innet": "^1.0.1",
+    "inputmask": "^5.0.7",
     "prismjs": "^1.29.0",
     "watch-state": "^3.4.5"
   },
