--- a/package.json
+++ b/package.json
@@ -57,20 +57,20 @@
     "@types/node": "^18.8.1",
     "@types/prismjs": "^1.26.0",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "core-js": "^3.25.3",
     "eslint": "^8.24.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-config-standard-with-typescript": "^27.0.1",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "innet-jest": "^1.3.5",
     "innetjs": "^2.3.7",
-    "typescript": "4.8.4",
+    "typescript": "^4.9.4",
     "web-scroll": "^1.1.0"
   }
 }
