--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "jest": true
   },
   "rules": {
+    "@typescript-eslint/prefer-optional-chain": "off",
     "no-redeclare": "off",
     "no-new": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
