--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cantinc/ui",
-  "version": "0.1.31",
+  "version": "0.2.0",
   "description": "UI components of innetjs",
   "homepage": "https://cantinc.github.io/ui",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "@cantinc/utils": "^1.4.2",
-    "@innet/dom": "^0.12.5",
+    "@innet/dom": "^0.13.0",
     "@innet/jsx": "^1.1.0",
     "@textlint/ast-node-types": "^13.1.1",
     "@textlint/markdown-to-ast": "^13.1.1",
@@ -70,6 +70,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "innet-jest": "^1.3.5",
     "innetjs": "^2.3.9",
+    "jest-scss-transform": "^1.0.3",
     "typescript": "^4.9.5",
     "web-scroll": "^1.1.0"
   }
