--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 INNETJS_ENV_PREFIX=CANTINC_UI_
 BUILD_FOLDER=docs
-BASE_URL=
+BASE_URL=/ui
 
 CANTINC_UI_VERSION=${npm_package_version}
 CANTINC_UI_BASE_URL=${BASE_URL}
