--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "types": "index.d.ts",
   "private": true,
   "scripts": {
-    "start": "innetjs start -i docs -e",
+    "start": "innetjs start -i docs",
     "build": "npm run build:ui && npm run build:docs",
     "build:docs": "innetjs build -i docs",
     "build:ui": "innetjs release",
@@ -38,40 +38,37 @@
   },
   "dependencies": {
     "@cantinc/utils": "^1.4.2",
-    "@innet/dom": "^0.13.5",
+    "@innet/dom": "^0.13.6",
     "@innet/jsx": "^1.2.1",
-    "@textlint/ast-node-types": "^13.1.1",
-    "@textlint/markdown-to-ast": "^13.1.1",
+    "@textlint/ast-node-types": "^13.3.2",
+    "@textlint/markdown-to-ast": "^13.3.2",
     "html-classes": "^2.0.2",
     "innet": "^1.0.1",
-    "inputmask": "^5.0.7",
+    "inputmask": "^5.0.8",
     "prismjs": "^1.29.0",
     "watch-state": "^3.4.5"
   },
-  "peerDependencies": {
-    "rollup-plugin-styles": "^4.0.0"
-  },
   "devDependencies": {
     "@types/inputmask": "^5.0.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/prismjs": "^1.26.0",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "core-js": "^3.27.2",
-    "eslint": "^8.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "core-js": "^3.29.1",
+    "eslint": "^8.37.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "innet-jest": "^1.3.5",
-    "innetjs": "^2.4.1",
+    "innetjs": "^2.5.3",
     "jest-scss-transform": "^1.0.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.3",
     "web-scroll": "^1.1.0"
   }
 }
