--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
   },
   "dependencies": {
     "@cantinc/utils": "^1.4.2",
-    "@innet/dom": "^0.14.0",
-    "@innet/jsx": "^1.2.1",
+    "@innet/dom": "^0.15.0-alpha.2",
+    "@innet/jsx": "^2.0.0-alpha.7",
+    "@watch-state/history-api": "^2.0.0-alpha.0",
     "@textlint/ast-node-types": "^13.3.2",
     "@textlint/markdown-to-ast": "^13.3.2",
     "html-classes": "^2.0.2",
-    "innet": "^1.0.1",
+    "innet": "^2.0.0-alpha.2",
     "inputmask": "^5.0.8",
     "prismjs": "^1.29.0",
-    "watch-state": "^3.4.5"
+    "sync-timer": "^1.0.1",
+    "watch-state": "^3.5.0-alpha.2"
   },
   "devDependencies": {
     "@types/inputmask": "^5.0.3",
@@ -68,7 +70,7 @@
     "innet-jest": "^1.3.5",
     "innetjs": "^2.5.3",
     "jest-scss-transform": "^1.0.3",
-    "typescript": "^5.0.3",
+    "typescript": "^5.1.3",
     "web-scroll": "^1.1.0"
   }
 }
