--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cantinc/ui",
-  "version": "0.3.8",
+  "version": "0.4.0-alpha.0",
   "description": "UI components of innetjs",
   "homepage": "https://cantinc.github.io/ui",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
@@ -38,9 +38,9 @@
   },
   "dependencies": {
     "@cantinc/utils": "^1.4.2",
-    "@innet/dom": "^0.15.0-alpha.2",
+    "@innet/dom": "^0.15.0-alpha.3",
     "@innet/jsx": "^2.0.0-alpha.7",
-    "@watch-state/history-api": "^2.0.0-alpha.0",
+    "@watch-state/history-api": "^2.0.0-alpha.1",
     "@textlint/ast-node-types": "^13.3.2",
     "@textlint/markdown-to-ast": "^13.3.2",
     "html-classes": "^2.0.2",
