--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "jest": true
   },
   "rules": {
+    "@typescript-eslint/non-nullable-type-assertion-style": "off",
     "@typescript-eslint/no-unsafe-argument": "off",
     "unused-imports/no-unused-imports": "error",
     "@typescript-eslint/prefer-optional-chain": "off",
