--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cantinc/ui",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "UI components of innetjs",
   "homepage": "https://cantinc.github.io/ui",
   "author": "Mikhail Lysikov <d8corp@mail.ru>",
@@ -67,6 +67,7 @@
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "innet-jest": "^1.3.5",
     "innetjs": "^2.5.3",
     "jest-scss-transform": "^1.0.3",
